# SAGE

./: .gitignore
.github/prompts/: forced_request.prompt.md
sage_examples/: datastream_advanced_demo.cpp  datastream_demo.cpp  datastream_python_demo.py  external_memory_ingestion_pipeline.py  qa_refiner.py  simple_datastream_test.py  test_comprehensive_refactoring.py  test_refactored_operators.py
sage_examples/flow_examples/: README.md  build_cpp_demo.sh  comprehensive_test.py  datastream_cpp_demo.cpp
sage_ext/sage_flow/: CMakeLists.txt  pyproject.toml  setup.py
sage_ext/sage_flow/TODO/: phase2-stream-engine.md
sage_ext/sage_flow/docs/: architecture_refactor_summary.md  candyflow_class_analysis.md  class_structure_analysis.md  operator_architecture_restructuring.md
sage_ext/sage_flow/include/api/: datastream.h
sage_ext/sage_flow/include/function/: source_function.h  text_cleaner_function.h  text_embedding_function.h
sage_ext/sage_flow/include/operator/: map_operator.h  sink_operator.h  terminal_sink_operator.h
sage_ext/sage_flow/src/api/: datastream.cpp
sage_ext/sage_flow/src/engine/: execution_graph.cpp
sage_ext/sage_flow/src/function/: filter_function.cpp  function.cpp  map_function.cpp  text_embedding_function.cpp
sage_ext/sage_flow/src/index/: hnsw.cpp
sage_ext/sage_flow/src/operator/: file_sink_operator.cpp  filter_operator.cpp  map_operator.cpp  sink_operator.cpp
sage_ext/sage_flow/src/python/: CLEANUP_SUMMARY.md  datastream_bindings.cpp
sage_ext/sage_flow/src/python/operators/: file_sink_operator_bindings.cpp  terminal_sink_operator_bindings.cpp
sage_flow/: CMakeLists.txt  debug_test.py
sage_flow/TODO/: lambda-operators-refactoring-complete.md  phase1-core-types.md
sage_flow/docs/: README.md  code_cleanup_final_report.md
sage_flow/include/api/: datastream.h
sage_flow/include/engine/: execution_graph.h  stream_engine.h
sage_flow/include/environment/: sage_flow_environment.h
sage_flow/include/function/: document_parser_function.h  filter_function.h  function.h  map_function.h  sink_function.h
sage_flow/include/index/: index_operators.h
sage_flow/include/operator/: file_sink_operator.h  filter_operator.h  lambda_filter_operator.h  lambda_map_operator.h  lambda_operators.h  lambda_sinks.h  lambda_source_operator.h  terminal_sink_operator.h  vector_store_sink_operator.h
sage_flow/src/api/: datastream.cpp
sage_flow/src/engine/: stream_engine.cpp
sage_flow/src/environment/: sage_flow_environment.cpp
sage_flow/src/function/: document_parser_function.cpp  sink_function.cpp
sage_flow/src/operator/: lambda_filter_operator.cpp  lambda_map_operator.cpp  lambda_operators.cpp  lambda_sinks.cpp  lambda_source_operator.cpp  operator.cpp  operator_factory.cpp  terminal_sink_operator.cpp  vector_store_sink_operator.cpp
sage_flow/src/python/: datastream_bindings.cpp  lambda_filter_operator_bindings.cpp  lambda_map_operator_bindings.cpp  lambda_source_operator_bindings.cpp  vector_store_sink_operator_bindings.cpp
sage_runtime/task/: base_task.py
