[build-system]
requires = ["setuptools>=65", "wheel", "pybind11>=2.10.0", "cmake>=3.16"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-flow"
version = "0.2.0"
description = "SAGE Flow - High-Performance Stream Processing with C++ Extensions"
readme = "README.md"
authors = [
    {name = "IntelliStream", email = "intellistream@outlook.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pybind11>=2.10.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "cmake>=3.16",
    "build",
]

[project.urls]
Homepage = "https://github.com/intellistream/SAGE"
Repository = "https://github.com/intellistream/SAGE"
Issues = "https://github.com/intellistream/SAGE/issues"

[project.scripts]
sage-flow = "sage_flow:main"

[tool.setuptools]
packages = ["sage_flow"]

[tool.setuptools.package-data]
sage_flow = ["*.so", "build/*.so"]
